--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,13 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.0",
         "ext-json": "*",
-        "laravel/framework": "^10.0|^11.0"
+        "laravel/framework": "^9.0|^10.0|^11.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0|^9.0",
+        "laravel/pint": "^1.0",
+        "orchestra/testbench": "^7.0|^8.0|^9.0",
         "pestphp/pest-plugin-laravel": "^2.4"
     },
     "autoload": {
@@ -44,7 +45,8 @@
     },
     "scripts": {
         "test": "vendor/bin/pest",
-        "test:coverage": "vendor/bin/pest --coverage"
+        "test:coverage": "vendor/bin/pest --coverage",
+        "lint": "vendor/bin/pint"
     },
     "keywords": [
         "laravel",
